--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
     "firebase": "^12.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
