--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "puppeteer": "^24.24.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
